other-vpol/restrict-networkpolicy-empty-podselector/.kyverno-test-exceptions/resource.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: badnetworkpolicy
  namespace: policy-exceptions
spec:
  podSelector: {}
  policyTypes:
  - Ingress
