other-vpol/restrict-networkpolicy-empty-podselector/restrict-networkpolicy-empty-podselector.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-networkpolicy-empty-podselector
  annotations:
    policies.kyverno.io/title: Restrict NetworkPolicy with Empty podSelector in ValidatingPolicy
    policies.kyverno.io/category: Other, Multi-Tenancy in vpol 
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: NetworkPolicy
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      By default, all pods in a Kubernetes cluster are allowed to communicate with each other, and all
      network traffic is unencrypted. It is recommended to not use an empty podSelector in order to
      more closely control the necessary traffic flows. This policy requires that all NetworkPolicies
      other than that of `default-deny` not use an empty podSelector.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["networkpolicies"]
    excludeResourceRules:
      - apiGroups: ["networking.k8s.io"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["networkpolicies"]
        resourceNames: ["default-deny"]
  validations:
    - expression: "size(object.spec.podSelector) != 0 || 'podSelector:empty' in exceptions.allowedValues"
      message: "NetworkPolicies must not use an empty podSelector."
