other-vpol/restrict-networkpolicy-empty-podselector/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-networkpolicy-exceptions
policies:
- ../restrict-networkpolicy-empty-podselector.yaml
resources:
- resource.yaml
exceptions:
- ../.kyverno-test/exceptions.yaml
results:
- isValidatingPolicy: true
  kind: NetworkPolicy
  policy: restrict-networkpolicy-empty-podselector
  resources:
  - policy-exceptions/badnetworkpolicy
  result: pass
